...
        app:itemRippleColor="#C1C1C1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/paymentTopBox2"
        tools:ignore="SpeakableTextPresentCheck" />

    <ScrollView
        android:id="@+id/scroll_view2"
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topMessage4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cvLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/backGroundCover"
                android:layout_width="0dp"
...
                android:paddingBottom="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/billing_zip_box_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#CCFFFFFF"
                android:ems="10"
                android:fontFamily="@font/sofia_regular"
                android:hint="Zip"
                android:inputType="number"
                android:maxLength="5"
                android:padding="10dp"
                android:textColor="#808080"
                android:textColorHint="#808080"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/ccv_num_box_2"
                app:layout_constraintStart_toStartOf="@+id/exp_date_box_2"
                app:layout_constraintTop_toBottomOf="@+id/exp_date_box_2" />

            <Button
                android:id="@+id/back_button_3"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
...
                android:onClick="editPaymentPlansPage"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="Back"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold"
                android:visibility="visible"
                app:backgroundTint="@color/red_ec"
                app:layout_constraintStart_toStartOf="@+id/billing_zip_box_2"
                app:layout_constraintTop_toBottomOf="@+id/billing_zip_box_2" />

            <Button
                android:id="@+id/add_payment_method_button_2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/profile_page_all_curved_corners_red"
                android:fontFamily="@font/sofia_regular"
                android:foreground="@drawable/ripple_grayc1c1"
                android:letterSpacing="0.25"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="Add"
                android:textColor="#FFFFFF"
                android:textSize="15dp"
                android:textStyle="bold"
                android:visibility="visible"
                app:backgroundTint="@color/red_ec"
                app:layout_constraintEnd_toEndOf="@+id/billing_zip_box_2"
                app:layout_constraintTop_toBottomOf="@+id/billing_zip_box_2" />

            <EditText
                android:id="@+id/fullName_box_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="#CCFFFFFF"
...
                android:hint="Full Name"
                android:inputType="textCapWords|textCapSentences"
                android:padding="10dp"
                android:textColor="#808080"
                android:textColorHint="#808080"
                android:textStyle="bold"
                android:nextFocusDown="@+id/card_number_box_2"
                app:layout_constraintEnd_toEndOf="@+id/backGroundCover"
                app:layout_constraintStart_toStartOf="@+id/backGroundCover"
                app:layout_constraintTop_toBottomOf="@+id/WalletArtCover" />

            <EditText
                android:id="@+id/ccv_num_box_2"
...
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#CCFFFFFF"
                android:ems="10"
                android:fontFamily="@font/sofia_regular"
                android:hint="Card Number"
                android:inputType="phone"
                android:maxLength="19"
                android:padding="10dp"
                android:textColor="#808080"
                android:textColorHint="#808080"
                android:textStyle="bold"
                android:nextFocusDown="@+id/exp_date_box_2"
...
