...
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/payment_method_box_1"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="448dp"
...
                android:fontFamily="@font/sofia_regular"
                android:foreground="@drawable/ripple_red_25_corners"
                android:letterSpacing="0.2"
                android:onClick="payment_method_1"
                android:paddingStart="40dp"
                android:paddingTop="20dp"
                android:text="Payment Method 1"
                android:textColor="#EC3939"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileEmail"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/payment_method_box_2"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/white_box_red_stroke"
...
                app:layout_constraintBottom_toBottomOf="@+id/payment_method_box_2"
                app:layout_constraintEnd_toEndOf="@+id/payment_method_box_2"
                app:layout_constraintStart_toStartOf="@+id/payment_method_box_2" />


            <Button
                android:id="@+id/logOutButton"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginBottom="80dp"
                android:background="@drawable/profile_page_all_curved_corners_red"
                android:fontFamily="@font/sofia_regular"
                android:foreground="@drawable/ripple_grayc1c1"
...
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/edit_cards_button"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/profile_page_all_curved_corners_red"
                android:fontFamily="@font/sofia_regular"
                android:foreground="@drawable/ripple_grayc1c1"
...
                android:onClick="edit_payment_button"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="Edit"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:textStyle="bold"
                app:backgroundTint="@color/red_ec"
                app:layout_constraintBottom_toTopOf="@+id/payment_method_box_1"
                app:layout_constraintEnd_toEndOf="@+id/payment_method_box_1"
...
                android:letterSpacing="0.25"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingTop="0dp"
                android:paddingEnd="0dp"
                android:paddingBottom="0dp"
                android:text="Delete"
                android:textColor="#FFFFFF"
                android:textSize="10dp"
                android:textStyle="bold"
                android:visibility="invisible"
                app:backgroundTint="@color/red_ec"
                app:layout_constraintBottom_toTopOf="@+id/card_ending_1"
                app:layout_constraintEnd_toEndOf="@+id/payment_method_box_1"
                app:layout_constraintHorizontal_bias="0.536"
                app:layout_constraintStart_toStartOf="@+id/payment_method_box_1" />

            <Button
                android:id="@+id/delete_payment_2"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:background="@drawable/profile_page_all_curved_corners_red"
                android:fontFamily="@font/sofia_regular"
                android:foreground="@drawable/ripple_grayc1c1"
                android:letterSpacing="0.25"
...
